--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-streamlit>=1.28.0
+flask>=2.2.0
+flask-login>=0.6.3
 supabase>=2.0.0
+python-dotenv>=1.0.0
+gunicorn>=20.1.0
+streamlit>=1.28.0
 pandas>=2.0.0
 plotly>=5.15.0
-python-dotenv>=1.0.0 
 aiogram
